--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -7,7 +7,7 @@
 <a class="nav-link" href="{{site.baseurl}}/authors-list.html">Authors</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/Sponsors.html">Sponsors</a>
+<a class="nav-link" href="{{site.baseurl}}/sponsors.html">Sponsors</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/contact.html">Contact</a>
